feat: split config for local dev

--- a/src/config.local.yaml
+++ b/src/config.local.yaml
@@ -1,7 +1,7 @@
 site:
   name: The RED Method
   site: 'https://redrhino-online.github.io'
-  base: '/website-redrhino-online'
+  base: '/'
   trailingSlash: true
 
   googleSiteVerificationId: XXXXXXXXXXXXXXXXXXXXXXXX
