--- a/src/config.yaml
+++ b/src/config.yaml
@@ -16,7 +16,7 @@ metadata:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: The RED Method
     images:
       - url: '~/assets/images/default.png'
         width: 1200
